# HandheldPi

./: .gitignore  API.md  CLAUDE.md  PLAN.md  README.md  example_config.txt  pyproject.toml
assets/plymouth/hht/: hht.plymouth  hht.script
assets/sounds/: README.md
config/: dev-http.toml  dev.toml  device-dry.toml  hht.toml.example
docs/: DEVICE_CONFIGURATION.md  DEVICE_DRY_RUN.md  FLEET_PROVISIONING.md  LAN_E2E_RUNBOOK.md  TEST_REPORT_2026-07-18_offdevice.md  TEST_REPORT_TEMPLATE.md  TEST_SPECIFICATION.md
firmware/: st7789v_gamepi20.txt
scripts/: hht-firstboot.sh  install.sh  make_badge.py  make_sound_cues.py  make_splash_logo.py  make_test_sheet.py  setup_audio.sh  setup_camera.sh  setup_display.sh  setup_splash.sh  verify_unit.sh
src/hht/: __init__.py  __main__.py  config.py  events.py  flusher.py  logsetup.py  script_runner.py  state_machine.py
src/hht/audio/: __init__.py  alsa.py
src/hht/inputs/: __init__.py  gpio_buttons.py  keyboard.py
src/hht/scanner/: __init__.py  camera_scanner.py
src/hht/tools/: buttontest.py  logreport.py
src/hht/ui/: __init__.py  dev_displays.py  framebuffer.py  screens.py
src/hht/wms/: __init__.py  base.py  (+4 more)
systemd/: hht-boot-sound.service  hht-firstboot.service  hht.service
tests/: conftest.py  fake_wms.py  test_audio.py  test_config.py  test_functional_scripts.py  test_http_client.py  test_mock_wms.py  test_offline_queue.py  test_splash_assets.py  test_state_machine.py
tests/scripts/: discrepancy.txt  happy_path.txt  offline_pick.txt  power_cut_prep.txt  sync_failed.txt  token_expiry.txt  wrong_scans.txt
